--- a/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
+++ b/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
@@ -103,17 +103,17 @@ The function will return geographic coordinates of the location for which the ra
 
 ## 3. Spatial extent
 
-The function `make.grid` sets up a spatial grid (50 X 50 km on default) delimited by user-defined boundaries: `left`, `right`. `bottom` and `top`. When the tagged animal cannot occur or stay between two subsequent twilights over particular areas, e.g. open water for a landbird, additional parameters `distance.from.land.allowed.to.use` and `distance.from.land.allowed.to.stay` can be specified. Each of the parameters require a vector of two numbers: the minimal and the maximal distances (in km) from shoreline, at which the animal is allowed to occur/stay.
+The function `make.grid` sets up a spatial grid (50 X 50 km on default) delimited by user-defined boundaries: `left`, `right`. `bottom` and `top`. When the tagged animal cannot occur or stay between two subsequent twilights over particular areas, e.g. open water for a landbird or deep inland for a marine animal, additional parameters `distance.from.land.allowed.to.use` and `distance.from.land.allowed.to.stay` can be specified. Each of the parameters require a vector of two numbers: the minimal and the maximal distances (in km) from shoreline, at which the animal is allowed to occur/stay.
 ```{r, eval = F}
 Grid<-make.grid(left=-14, bottom=30, right=13, top=57,
    distance.from.land.allowed.to.use=c(-Inf, Inf),
    distance.from.land.allowed.to.stay=c(-Inf, Inf))
 ```
-The resulting grid is a matrix with the columns: `lon` (longitude), `lat` (latitude) and `Stay` (probability of stay). The grid cells, which the animal presumably cannot use (e.g. locations over land for a marine animal), are excluded from the data, while the locations at which an animal cannot be stationary are given a low probability of stay. Using masks can side track model estimation to the local minima, so we recommend to initially run model without a mask, enable them for the second run and visually compare the results, to see if the model converges to a similar track.
+The resulting `Grid` is a matrix with the columns: `lon` (longitude), `lat` (latitude) and `Stay` (probability of stay). The grid cells, which the animal presumably cannot use, are excluded from the data, while the locations at which an animal cannot be stationary are given a low probability of stay. Using masks can side track model estimation to the local minima, and we recommend to initially run model without a mask, enable them for the second run and visually compare the results, to see if the model converges to a similar track.
 
 ## 4. Create proposal
 
-Here we create a complex object, which will be used in the main run. It incorporates all the objects, created at earlier steps: the light data with the detected twilight events (Proc.data), the spatial parameters (Grid), geographic coordinates of the initial location, where the tracking has started (start), and the calibration parameters (Calibration).
+The function `make.prerun.object` creates a complex object, which will be used in the main run. It incorporates all the objects, created at earlier steps: the light data with the detected twilight events (`Proc.data`), the spatial parameters (`Grid`), geographic coordinates of the initial location, where the tracking has started (`start`), and the calibration parameters (`Calibration`).
 
 ```{r, eval = F}
 # ~ 15 min run time
@@ -121,12 +121,12 @@ all.in<-make.prerun.object(Proc.data, Grid, start=c(5.43, 52.93), Calibration=Ca
 ```
 ## 5. Run particle filter
 
-At this stage, results are calculated (coordinates, behavior, probability of migration).
-Within the `run.particle.filter`, the following parameters can be defined: 
+At this stage, the model output is generated. It contains: a table of positions at each twilight (`$Results$Quantiles`) and their statistics (mean, median values and credible intervals), a table of parameters of the movement model (`$Results$Movement.results`) and posterior distribution at every twilight (`$Results$Points.rle`) and at every transition between twilights (`$Results$Transitions.rle`). 
+Within `run.particle.filter`, the following parameters can be defined: 
 * `nParticles` - number of particles (1e4 is recommended for test and 1e6 for the analysis);
 * `threads` - amount of parallel threads to use for the run default is -1 that means all available except one;
-* `known.last` - TRUE if you know that in the end of data collection tag was in a known place (FALSE is the default option);
-* `check.outliers` – FALSE by default. Set it TRUE if you wish on a fly outliers detection, we recommend use it if results have strong outliers.
+* `known.last` - TRUE if you know that in the end of the logging period tag occurred in a known place (FALSE is the default option);
+* `check.outliers` – FALSE by default. Set it TRUE if you wish on a fly outliers detection, we recommend to use it if the results have strong outliers.
 
 ```{r, eval = F}
 nParticles=1e6
@@ -136,12 +136,11 @@ Result<-run.particle.filter(all.in, threads=-1,
 		    precision.sd=25, check.outliers=F)
 save(Result, file="Result.bltg.ageing.model.noOD.RData")
 ```
-Now your results are saved in your work directory as an RData object.
+Now the results are saved in your work directory as an RData object.
 
-## 6. Migration schedules
+## 6. Estimation of arrival and departure dates
 
-We can extract departure arrival estimates from the results we have got. 
-First select grid points that are of interest. For example in the current data we are interested to figure out when our bird left the Netherlands. We will make  a boundary at 2&deg; longitude;
+The function `find.times.distribution` derives the time at which an animal arrived or departed from the area and provides the measure of its uncertainty. First, select grid points of interest. For example in the current data we are interested in the date when our bird left the Netherlands. We will make  a boundary at 2&deg; longitude;
 ```{r, eval = F}
 Index<-which(Result$Spatial$Grid[,1]>(2))
 ```
