--- a/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
+++ b/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
@@ -64,7 +64,8 @@ Calibration.periods<-data.frame(
         calibration.start=as.POSIXct(c(NA, "2014-05-05")),
         calibration.stop=as.POSIXct(c("2013-08-20", NA)),
         lon=5.43, lat=52.93) 
-		#use c() also for the geographic coordinates, if you have more than one calibration location
+		#use c() also for the geographic coordinates, 
+		#if you have more than one calibration location
 		# (e. g.,  lon=c(5.43, 6.00), lat=c(52.93,52.94))
 print(Calibration.periods)
 ```
@@ -97,7 +98,8 @@ It may happen that an animal was tagged in the High Arctic under polar day condi
 [Lisovski et al. 2012b](#lisovski_2012b) implemented in GeoLight [Lisovksi et al. 2012a](#lisovski_2012a). If bird is assumed to be resident at some period one can try:
 ```{r, eval=FALSE}
 # ~ 15 min run time
-Location<-find.stationary.location(Proc.data, '2013-07-20', '2013-08-20', initial.coords=c(10, 50))
+Location<-find.stationary.location(Proc.data, '2013-07-20', '2013-08-20',
+                                   initial.coords=c(10, 50))
 ```
 The function will return geographic coordinates of the location for which the range of errors in slopes is minimal. User has to provide the initial coordinates, which should be within a few thousand kilometers from the hypothetical real location.
 
