--- a/examples/Black-Tailed_Godwit_JAB_example/A6_FLightR_analysis.Rmd
+++ b/examples/Black-Tailed_Godwit_JAB_example/A6_FLightR_analysis.Rmd
@@ -6,7 +6,7 @@
 # Intigeo tag on a Bar tailed godwit analysis example
 # FLightR analysis
 Appendix A6 to 
-Rakhimberdiev, E., Senner, N. R., Verhoeven, M. A., Winkler, D. W., Bouten, W. and Piersma T. 2016 Comparing inferences of solar geolocation data against high-precision GPS data: annual movements of a double-tagged Black-Tailed Godwit. - Journal of Avian Biology 47(4): 589–596. {DOI](www.dx.doi.org/10.1111/jav.00891)
+Rakhimberdiev, E., Senner, N. R., Verhoeven, M. A., Winkler, D. W., Bouten, W. and Piersma T. 2016 Comparing inferences of solar geolocation data against high-precision GPS data: annual movements of a double-tagged Black-Tailed Godwit. - Journal of Avian Biology 47(4): 589–596. [DOI](www.dx.doi.org/10.1111/jav.00891)
 
 ## Install package
 We used FLightR 0.3.6 version, so you might want to install it if you want to get exactly the same results.
