--- a/examples/Black-Tailed_Godwit_JAB_example/readme.rmd
+++ b/examples/Black-Tailed_Godwit_JAB_example/readme.rmd
@@ -1,2 +1,2 @@
 # these files are supplementary materials to 
-Rakhimberdiev, E., Senner, N. R., Verhoeven, M. A., Winkler, D. W., Bouten, W. and Piersma T. 2016 Comparing inferences of solar geolocation data against high-precision GPS data: annual movements of a double-tagged Black-Tailed Godwit. - Journal of Avian Biology 47(4): 589–596. {DOI](www.dx.doi.org/10.1111/jav.00891)
+Rakhimberdiev, E., Senner, N. R., Verhoeven, M. A., Winkler, D. W., Bouten, W. and Piersma T. 2016 Comparing inferences of solar geolocation data against high-precision GPS data: annual movements of a double-tagged Black-Tailed Godwit. - Journal of Avian Biology 47(4): 589–596. [DOI](www.dx.doi.org/10.1111/jav.00891)
