--- a/R/NEWS
+++ b/R/NEWS
@@ -17,3 +17,4 @@
 # ver. 0.4.0 solving dateline isssues for ploitting
 # ver 0.4.4 many changes, all tests, helpfiles, ready for CRAN submission
 # ver 0.4.5 corrected mistakes in check submitted to CRAN
+# ver 0.4.6 added support for old swiss loggers, improved find stationary location function small bug fixes, citation update
