--- a/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
+++ b/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
@@ -46,7 +46,7 @@ The function `get.tags.data` reads comma separated file in the TAGS format, dete
 3. light level data at the moment of each determined sunrise and sunset and around them (24 fixes before and 24 after it events into an object of two lists
 4. technical parameters of the tag, added automatically, unless preset by the user.
 
-The finction works with all the common tag types: mk tags (produced by British Antarctic Survey, Lotek, and Migrate Technology Ltd.), Intigeo tags (Migrate technology Ltd.) and GDL tags (Swiss Ornithological Institute).
+The function works with all the common tag types: mk tags (produced by British Antarctic Survey, Lotek, and Migrate Technology Ltd.), Intigeo tags (Migrate technology Ltd.) and GDL tags (Swiss Ornithological Institute).
 ```{r, eval=FALSE, tidy=FALSE}
 Proc.data<-get.tags.data("example_TAGS_format.csv")
 ```
