--- a/R/NEWS
+++ b/R/NEWS
@@ -14,9 +14,10 @@
 # ver 0.3.6 03 Dec 2015 new boundaries for Intigeo tags, changes in black-tailed godwit examples many bug fixes
 # ver. 0.3.8 bigMemory and new workflow
 # ver. 0.3.9 no preestimated distances and angles - attempt to save memory on large spatial extents, new workflow
-# ver. 0.4.0 solving dateline isssues for ploitting
+# ver. 0.4.0 solving dateline isssues for plotting
 # ver 0.4.4 many changes, all tests, helpfiles, ready for CRAN submission
 # ver 0.4.5 corrected mistakes in check submitted to CRAN
 # ver 0.4.6 added support for old swiss loggers, improved find stationary location function small bug fixes, citation update, added vignette, fixed many small bugs.
 # ver 0.4.7 many small stability improvements, typo corrections and new error mesages
 # ver 0.4.8 compartible with ggmap >= 3.0.0
+# ver 0.4.9 small bug fixes in calibration function, FLightR2Movebank function added
